# compras_estoque_sistema_4.2

./: .gitignore  auditor_item_completo.py  contexto_completo_do_sistema.txt  contexto_completo_do_sistema_sem_dashboard_16122025_ok.txt  export_full_project.py  launcher_gui.py  pyproject.toml  rodar.sh.save  verificar_ambiente.py
backups/antes_melhorias/: estoque_math.py  excel_exporter.py  gerar_relatorio_final.py
config/: parametros.yaml
scripts/: auditor_item.py  auditor_real.py  auditoria_automatica.py  calcular_sazonalidade.py  debug_item.py  export_project_context.py  fix_toml.py  gerar_relatorio_final.py  inspect_db.py  setup_database.py  testar_analytics.py  verificar_ambiente.py
src/compras_sistema/core/: config.py  reporter.py  system_guard.py
src/compras_sistema/data_engine/: analytics_service.py  duckdb_manager.py  history_recorder.py
src/compras_sistema/data_engine/queries/: abc_financeiro.sql  estatisticas_vendas.sql
src/compras_sistema/export/: excel_exporter.py
src/compras_sistema/rule_engine/: base_rule.py
src/compras_sistema/rule_engine/classification/: abc_classifier.py  trend_classifier.py  xyz_classifier.py
src/compras_sistema/rule_engine/stock/: estoque_math.py
src/compras_sistema/utils/: sanitizer.py
src/ui/components/: dashboard.py  sidebar.py
tests/: conftest.py
tests/integration/: test_classifiers.py
tests/unit/: test_correcoes_estoque.py  test_estoque_math.py  test_validator.py
tests_refactor/: test_01_blindagem_entrada.py  test_02_estoque_math.py  test_03_diagnostico.py  test_04_abc.py
(+1 files in other folders)
